--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sequelize": "^4.27.0",
     "slugs": "^0.1.3",
     "underscore": "^1.8.3",
-    "winston": "^2.4.0"
+    "winston": "^3.0.0-rc0"
   },
   "engines": {
     "node": ">=8.0.0"
